# optimal_lasso

./: .gitattributes  .gitignore  README.md  lasso_plan.html  pyproject.toml  requirements.txt
data/: README.md
data/processed/diabetes/: diabetes.npz
data/processed/e2006/: e2006_subset.npz
data/processed/synthetic/: synthetic_corr_050.npz  synthetic_corr_095.npz  synthetic_correlated.npz  synthetic_demo.npz  synthetic_noise_050.npz  synthetic_noise_100.npz  synthetic_noise_free.npz  synthetic_small.npz  synthetic_stress.npz
data/raw/e2006/: README.md
experiments/: __init__.py  prepare_data.py  run_all.py  run_mu_path.py  run_template.py
outputs/tables/: diabetes_results.csv  e2006_results.csv  results_template.csv  synthetic_corr_050_results.csv  synthetic_corr_095_results.csv  synthetic_demo_results.csv  synthetic_noise_050_results.csv  synthetic_noise_100_results.csv
src/lasso_demo/: __init__.py  core.py  data.py  metrics.py  pipeline.py  plotting.py  results.py
src/lasso_demo/algorithms/: __init__.py
src/lasso_demo/algorithms/module_b/: README.md  __init__.py  fista.py  ista.py  solver_template.py  subgradient.py
src/lasso_demo/algorithms/module_c/: README.md  __init__.py  admm.py  coordinate_descent.py  solver_template.py
tests/: README.md  test_core.py  test_data.py  test_metrics_results.py  test_pipeline.py  test_plotting.py
