[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lasso-optimization-demo"
version = "0.1.0"
description = "LASSO optimization course project framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.12",
]

[tool.setuptools.packages.find]
where = ["src"]

